bug fixing in Grouo saving plan and Share extension

--- a/SavioWishList/Info.plist
+++ b/SavioWishList/Info.plist
@@ -52,5 +52,11 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>MainInterface</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GothamRounded-Light.otf</string>
+		<string>GothamRounded-Medium.otf</string>
+		<string>gotham-rounded-book-2.otf</string>
+	</array>
 </dict>
 </plist>
