--- a/Savio/Savio.entitlements
+++ b/Savio/Savio.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.web.share.extention</string>
+		<string>group.com.mbf.savio</string>
 	</array>
 </dict>
 </plist>
