--- a/Savio/Info.plist
+++ b/Savio/Info.plist
@@ -37,6 +37,11 @@
 		<string>GothamRounded-Medium.otf</string>
 		<string>gotham-rounded-book-2.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
