Worked on bug fixes

--- a/SavioWishList/SavioWishList.entitlements
+++ b/SavioWishList/SavioWishList.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.mbf.savio</string>
+		<string>group.com.extension-demo</string>
 	</array>
 </dict>
 </plist>
