--- a/Savio/Savio.entitlements
+++ b/Savio/Savio.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.com.extension-demo</string>
 		<string>group.com.mbf.savio</string>
 	</array>
 </dict>
