--- a/Savio/Info.plist
+++ b/Savio/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This is required to Access the Camera</string>
 	<key>NSContactsUsageDescription</key>
 	<string>This is required to add friends to Group plans</string>
 	<key>NSPhotoLibraryUsageDescription</key>
