--- a/Savio/Savio.entitlements
+++ b/Savio/Savio.entitlements
@@ -4,13 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
-	<key>com.apple.developer.pass-type-identifiers</key>
-	<array>
-		<string>$(TeamIdentifierPrefix)*</string>
-	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.savio.web.share.extention</string>
+		<string>group.com.mbf.savio</string>
 	</array>
 </dict>
 </plist>
