Resolved issues address by anburose

--- a/Savio/Info.plist
+++ b/Savio/Info.plist
@@ -60,10 +60,7 @@
 		<string>gotham-rounded-book-2.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
+	<array/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
