--- a/Savio/Savio.entitlements
+++ b/Savio/Savio.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.mbf.savio</string>
+		<string>group.savio.web.share.extention</string>
 	</array>
 </dict>
 </plist>
