--- a/Savio/Info.plist
+++ b/Savio/Info.plist
@@ -60,7 +60,10 @@
 		<string>gotham-rounded-book-2.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
